# Final_Project

./: .gitignore  README.md
Unity3d Asset/3DModels/: House 1.blend  House.blend  Swimmer.blend  inlandvessel_V2.blend
Unity3d Asset/Material/: Bottom.mat  Cabin.mat  Hull.mat  Lidar.mat  New Material.mat  Radar.mat
Unity3d Asset/Scripts/: ROSPublishHeader.cs  ROSPublishIMU.cs  ROSPublishImg.cs  ROSPublishLidarString.cs  ROSPublishRadar1.cs  ROSPublishXYZ.cs  SensorImage.cs  SensorManager.cs  UIChooseCam.cs  UIChooseQuit.cs  UIChooseReload.cs  UIChooseRes.cs  VesselMoveKeyboard.cs
Unity3d Asset/Scripts/log/: latest_list
Unity3d Asset/Terrain/: NewLayer 1.terrainlayer  NewLayer 2.terrainlayer  NewLayer.terrainlayer
gnc_interfaces/: CMakeLists.txt  package.xml
gnc_interfaces/msg/: IMUSensor.msg  ImageSensor.msg  RadarSensor.msg  XYZLidar.msg
navi_subsys_1_0/: package.xml  setup.cfg  setup.py
navi_subsys_1_0/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
navi_subsys_1_0/install/navi_subsys_1_0/share/navi_subsys_1_0/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
navi_subsys_1_0/log/: latest_build  latest_list
navi_subsys_1_0/navi_subsys_1_0/: get_image.py  get_imu.py  get_lidar.py  get_radar.py  get_string.py
tex-files/: Akronyme.tex  Attachements.tex  Conclusion.tex  Experiment.tex  Fundamentals.tex  Implementation.tex  Introduction.tex  Main.lot  Main.tex  ModulImplementation.tex  Summary.tex  Titel.tex  bib.bib
tex-files/Bilder/: CollisionmeshVessel.odg
(+3 files in other folders)
